--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "reactStudent",
+  "name": "reactstudent",
   "version": "1.0.0",
   "main": "index.js",
   "author": "瓦姆乌·湫曗 <autumnsilverleaves@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/nanoid": "^2.1.0",
     "husky": "^4.2.3",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
@@ -15,5 +16,8 @@
     "hooks": {
       "pre-commit": "pretty-quick --staged"
     }
+  },
+  "dependencies": {
+    "nanoid": "^2.1.11"
   }
 }
