--- a/package.json
+++ b/package.json
@@ -5,21 +5,40 @@
   "author": "瓦姆乌·湫曗 <autumnsilverleaves@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env TS_NODE_PROJECT=\"scripts/rollup/tsconfig.json\" ts-node ./scripts/rollup/rollup.ts"
+    "build": "cross-env TS_NODE_PROJECT=\"scripts/rollup/tsconfig.json\" ts-node ./scripts/rollup/rollup.ts",
+    "serve": "cross-env TS_NODE_PROJECT=\"scripts/webpack/tsconfig.json\" webpack-dev-server --config scripts/webpack/webpack.config.ts --mode development"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.6",
+    "@babel/preset-env": "^7.8.6",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@rollup/plugin-typescript": "^3.0.0",
+    "@types/html-webpack-plugin": "^3.2.2",
     "@types/nanoid": "^2.1.0",
+    "@types/webpack": "^4.41.7",
+    "@types/webpack-dev-server": "^3.10.0",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^3.6.4",
+    "css-loader": "^3.4.2",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^4.2.3",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
+    "raw-loader": "^4.0.0",
     "rollup": "^1.32.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-typescript2": "^0.26.0",
+    "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "tslib": "^1.11.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "husky": {
     "hooks": {
