--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "ES2019",
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
-    "declaration": true
+    "declaration": true,
+    "jsx": "preserve"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "dev/**/*"]
 }
